<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:context=".LoginFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    style="@style/textblocktrans"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/txtUserName"
                    style="@style/edittext"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    style="@style/textblocktrans"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/userpass" />

                <EditText
                    android:id="@+id/txtUserPass"
                    style="@style/edittext"
                    android:hint="@string/userpass"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/btnlogin" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/btnreg" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>